Changes security config